     * New command "lacp/show-stats"
   - ovs-ofctl:
     * ovs-ofctl now accepts and display table names in place of numbers.  By
       default it always accepts names and in interactive use it displays them;
       use --names or --no-names to override.  See ovs-ofctl(8) for details.
   - ovs-vsctl: New commands "add-bond-iface" and "del-bond-iface".
   - OpenFlow:
     * OFPT_ROLE_STATUS is now available in OpenFlow 1.3.
     * OpenFlow 1.5 extensible statistics (OXS) now implemented.
     * New OpenFlow 1.0 extensions for group support.
     * Default selection method for select groups is now dp_hash with improved
       accuracy.
   - Linux datapath
     * Add support for compiling OVS with the latest Linux 4.14 kernel.
     * Added support for meters.
     * Add support for conntrack zone limit.
   - ovn:
     * Implemented icmp4/icmp6/tcp_reset actions in order to drop the packet
       and reply with a RST for TCP or ICMPv4/ICMPv6 unreachable message for
       other IPv4/IPv6-based protocols whenever a reject ACL rule is hit.
     * ACL match conditions can now match on Port_Groups as well as address
       sets that are automatically generated by Port_Groups.  ACLs can be
       applied directly to Port_Groups as well.
     * ovn-nbctl can now run as a daemon (long-lived, background process).
       See ovn-nbctl(8) for details.
   - DPDK:
     * New 'check-dpdk' Makefile target to run a new system testsuite.
       See Testing topic for the details.
     * Add LSC interrupt support for DPDK physical devices.
     * Allow init to fail and record DPDK status/version in OVS database.
     * Add experimental flow hardware offload support
     * Support both shared and per port mempools for DPDK devices.
   - Userspace datapath:
     * Commands ovs-appctl dpif-netdev/pmd-*-show can now work on a single PMD
     * Detailed PMD performance metrics available with new command
         ovs-appctl dpif-netdev/pmd-perf-show